{
  "version": 4,
  "terraform_version": "1.5.3",
  "serial": 405,
  "lineage": "d675c024-2d12-8482-432d-be6c1e47f802",
  "resources": [
    {
      "module": "module.web_alb",
      "mode": "managed",
      "type": "aws_lb",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "access_logs": [
              {
                "enabled": false
              }
            ],
            "arn": "arn:aws:elasticloadbalancing:eu-central-1:509580140651:loadbalancer/app/alb/f4a1457d1889c408",
            "arn_suffix": "app/alb/f4a1457d1889c408",
            "desync_mitigation_mode": "defensive",
            "dns_name": "alb-819920061.eu-central-1.elb.amazonaws.com",
            "drop_invalid_header_fields": false,
            "enable_cross_zone_load_balancing": true,
            "enable_deletion_protection": false,
            "enable_http2": true,
            "enable_tls_version_and_cipher_suite_headers": false,
            "enable_waf_fail_open": false,
            "enable_xff_client_port": true,
            "id": "arn:aws:elasticloadbalancing:eu-central-1:509580140651:loadbalancer/app/alb/f4a1457d1889c408",
            "idle_timeout": 60,
            "internal": false,
            "ip_address_type": "ipv4",
            "load_balancer_type": "application",
            "name": "alb",
            "preserve_host_header": false,
            "security_groups": [
              "sg-00b5327ad33a3c114",
              "sg-0ace550ac4fdf1da4"
            ],
            "subnet_mapping": [
              {
                "subnet_id": "subnet-00d4acc4d6f7919a1"
              },
              {
                "subnet_id": "subnet-031d203224ada6149"
              },
              {
                "subnet_id": "subnet-0b4f666cd28e993e6"
              }
            ],
            "subnets": [
              "subnet-00d4acc4d6f7919a1",
              "subnet-031d203224ada6149",
              "subnet-0b4f666cd28e993e6"
            ],
            "tags": {
              "Environment": "dev",
              "Name": "web-dev-alb"
            },
            "tags_all": {
              "Environment": "dev",
              "Name": "web-dev-alb"
            },
            "timeouts": {
              "create": "10m",
              "delete": "10m",
              "update": "10m"
            },
            "vpc_id": "vpc-00b67dc242990a793",
            "xff_header_processing_mode": "append",
            "zone_id": "Z215JYRZR1TBD5"
          },
          "dependencies": [
            "module.web_alb.aws_security_group.this",
            "module.web_sg.aws_security_group.this",
            "module.web_sg.aws_security_group.this_name_prefix",
            "module.web_vpc.aws_subnet.public"
          ]
        }
      ]
    },
    {
      "module": "module.web_alb",
      "mode": "managed",
      "type": "aws_lb_listener",
      "name": "frontend_http_tcp",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": []
    },
    {
      "module": "module.web_alb",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-central-1:509580140651:security-group/sg-00b5327ad33a3c114",
            "description": "Managed by Terraform",
            "egress": [],
            "id": "sg-00b5327ad33a3c114",
            "ingress": [],
            "name": "alb-20230725163625712700000002",
            "name_prefix": "alb-",
            "owner_id": "509580140651",
            "revoke_rules_on_delete": false,
            "tags": {
              "Environment": "dev",
              "Name": "alb"
            },
            "tags_all": {
              "Environment": "dev",
              "Name": "alb"
            },
            "timeouts": null,
            "vpc_id": "vpc-00b67dc242990a793"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.web_vpc.aws_vpc.this"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "module": "module.web_sg",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": []
    },
    {
      "module": "module.web_sg",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "this_name_prefix",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-central-1:509580140651:security-group/sg-0ace550ac4fdf1da4",
            "description": "Module with security group",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "All protocols",
                "from_port": 0,
                "ipv6_cidr_blocks": [
                  "::/0"
                ],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0ace550ac4fdf1da4",
            "ingress": [
              {
                "cidr_blocks": [
                  "37.214.0.0/16"
                ],
                "description": "HTTP",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              },
              {
                "cidr_blocks": [
                  "37.214.0.0/16"
                ],
                "description": "HTTPS",
                "from_port": 443,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 443
              },
              {
                "cidr_blocks": [
                  "37.214.0.0/16"
                ],
                "description": "SSH",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              }
            ],
            "name": "web_sec_group-20230725163625681300000001",
            "name_prefix": "web_sec_group-",
            "owner_id": "509580140651",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "web_sec_group"
            },
            "tags_all": {
              "Name": "web_sec_group"
            },
            "timeouts": {
              "create": "10m",
              "delete": "15m"
            },
            "vpc_id": "vpc-00b67dc242990a793"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.web_vpc.aws_vpc.this"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "module": "module.web_sg",
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "egress_rules",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": [
              "0.0.0.0/0"
            ],
            "description": "All protocols",
            "from_port": 0,
            "id": "sgrule-3616733965",
            "ipv6_cidr_blocks": [
              "::/0"
            ],
            "prefix_list_ids": [],
            "protocol": "-1",
            "security_group_id": "sg-0ace550ac4fdf1da4",
            "security_group_rule_id": "",
            "self": false,
            "source_security_group_id": null,
            "timeouts": null,
            "to_port": 0,
            "type": "egress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.web_sg.aws_security_group.this",
            "module.web_sg.aws_security_group.this_name_prefix",
            "module.web_vpc.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.web_sg",
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "ingress_rules",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": [
              "37.214.0.0/16"
            ],
            "description": "HTTP",
            "from_port": 80,
            "id": "sgrule-98446568",
            "ipv6_cidr_blocks": [],
            "prefix_list_ids": [],
            "protocol": "tcp",
            "security_group_id": "sg-0ace550ac4fdf1da4",
            "security_group_rule_id": "sgr-022ad491c4b915474",
            "self": false,
            "source_security_group_id": null,
            "timeouts": null,
            "to_port": 80,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.web_sg.aws_security_group.this",
            "module.web_sg.aws_security_group.this_name_prefix",
            "module.web_vpc.aws_vpc.this"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": [
              "37.214.0.0/16"
            ],
            "description": "HTTPS",
            "from_port": 443,
            "id": "sgrule-3872563312",
            "ipv6_cidr_blocks": [],
            "prefix_list_ids": [],
            "protocol": "tcp",
            "security_group_id": "sg-0ace550ac4fdf1da4",
            "security_group_rule_id": "sgr-0d4722c1f0197cae0",
            "self": false,
            "source_security_group_id": null,
            "timeouts": null,
            "to_port": 443,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.web_sg.aws_security_group.this",
            "module.web_sg.aws_security_group.this_name_prefix",
            "module.web_vpc.aws_vpc.this"
          ]
        },
        {
          "index_key": 2,
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": [
              "37.214.0.0/16"
            ],
            "description": "SSH",
            "from_port": 22,
            "id": "sgrule-2826455515",
            "ipv6_cidr_blocks": [],
            "prefix_list_ids": [],
            "protocol": "tcp",
            "security_group_id": "sg-0ace550ac4fdf1da4",
            "security_group_rule_id": "sgr-01b74aa1fcdaf8fed",
            "self": false,
            "source_security_group_id": null,
            "timeouts": null,
            "to_port": 22,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.web_sg.aws_security_group.this",
            "module.web_sg.aws_security_group.this_name_prefix",
            "module.web_vpc.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.web_vpc",
      "mode": "managed",
      "type": "aws_default_network_acl",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:eu-central-1:509580140651:network-acl/acl-01f48086c32f5b15f",
            "default_network_acl_id": "acl-01f48086c32f5b15f",
            "egress": [
              {
                "action": "allow",
                "cidr_block": "",
                "from_port": 0,
                "icmp_code": 0,
                "icmp_type": 0,
                "ipv6_cidr_block": "::/0",
                "protocol": "-1",
                "rule_no": 101,
                "to_port": 0
              },
              {
                "action": "allow",
                "cidr_block": "0.0.0.0/0",
                "from_port": 0,
                "icmp_code": 0,
                "icmp_type": 0,
                "ipv6_cidr_block": "",
                "protocol": "-1",
                "rule_no": 100,
                "to_port": 0
              }
            ],
            "id": "acl-01f48086c32f5b15f",
            "ingress": [
              {
                "action": "allow",
                "cidr_block": "",
                "from_port": 0,
                "icmp_code": 0,
                "icmp_type": 0,
                "ipv6_cidr_block": "::/0",
                "protocol": "-1",
                "rule_no": 101,
                "to_port": 0
              },
              {
                "action": "allow",
                "cidr_block": "0.0.0.0/0",
                "from_port": 0,
                "icmp_code": 0,
                "icmp_type": 0,
                "ipv6_cidr_block": "",
                "protocol": "-1",
                "rule_no": 100,
                "to_port": 0
              }
            ],
            "owner_id": "509580140651",
            "subnet_ids": [
              "subnet-001f6f5304a1232d4",
              "subnet-00d4acc4d6f7919a1",
              "subnet-011dc19b6b30f5b78",
              "subnet-031d203224ada6149",
              "subnet-06bca406e38cd8592",
              "subnet-0b4f666cd28e993e6"
            ],
            "tags": {
              "Environment": "dev",
              "Name": "web-dev-vpc"
            },
            "tags_all": {
              "Environment": "dev",
              "Name": "web-dev-vpc"
            },
            "vpc_id": "vpc-00b67dc242990a793"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.web_vpc.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.web_vpc",
      "mode": "managed",
      "type": "aws_default_route_table",
      "name": "default",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:eu-central-1:509580140651:route-table/rtb-017705f25028b4bb4",
            "default_route_table_id": "rtb-017705f25028b4bb4",
            "id": "rtb-017705f25028b4bb4",
            "owner_id": "509580140651",
            "propagating_vgws": [],
            "route": [],
            "tags": {
              "Environment": "dev",
              "Name": "web-dev-vpc"
            },
            "tags_all": {
              "Environment": "dev",
              "Name": "web-dev-vpc"
            },
            "timeouts": {
              "create": "5m",
              "update": "5m"
            },
            "vpc_id": "vpc-00b67dc242990a793"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.web_vpc.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.web_vpc",
      "mode": "managed",
      "type": "aws_default_security_group",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-central-1:509580140651:security-group/sg-0acf93fcb4b30e84b",
            "description": "default VPC security group",
            "egress": [],
            "id": "sg-0acf93fcb4b30e84b",
            "ingress": [],
            "name": "default",
            "name_prefix": "",
            "owner_id": "509580140651",
            "revoke_rules_on_delete": false,
            "tags": {
              "Environment": "dev",
              "Name": "web-dev-vpc"
            },
            "tags_all": {
              "Environment": "dev",
              "Name": "web-dev-vpc"
            },
            "vpc_id": "vpc-00b67dc242990a793"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.web_vpc.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.web_vpc",
      "mode": "managed",
      "type": "aws_eip",
      "name": "nat",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-0ed44319bdbd8cd1b",
            "association_id": "eipassoc-0420da8997973d062",
            "domain": "vpc",
            "id": "eipalloc-0ed44319bdbd8cd1b",
            "network_border_group": "eu-central-1",
            "network_interface": "eni-03c3e0b4b4c3aa103",
            "private_dns": "ip-10-0-101-60.eu-central-1.compute.internal",
            "private_ip": "10.0.101.60",
            "public_dns": "ec2-18-158-236-219.eu-central-1.compute.amazonaws.com",
            "public_ip": "18.158.236.219",
            "public_ipv4_pool": "amazon",
            "tags": {
              "Environment": "dev",
              "Name": "web-dev-vpc"
            },
            "tags_all": {
              "Environment": "dev",
              "Name": "web-dev-vpc"
            },
            "vpc": true
          },
          "dependencies": [
            "module.web_vpc.aws_internet_gateway.this",
            "module.web_vpc.aws_vpc.this",
            "module.web_vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.web_vpc",
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:eu-central-1:509580140651:internet-gateway/igw-091a2ef934c437ae8",
            "id": "igw-091a2ef934c437ae8",
            "owner_id": "509580140651",
            "tags": {
              "Environment": "dev",
              "Name": "web-dev-vpc"
            },
            "tags_all": {
              "Environment": "dev",
              "Name": "web-dev-vpc"
            },
            "vpc_id": "vpc-00b67dc242990a793"
          },
          "dependencies": [
            "module.web_vpc.aws_vpc.this",
            "module.web_vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.web_vpc",
      "mode": "managed",
      "type": "aws_nat_gateway",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-0ed44319bdbd8cd1b",
            "association_id": "eipassoc-0420da8997973d062",
            "connectivity_type": "public",
            "id": "nat-02e8a2e78a3a543b8",
            "network_interface_id": "eni-03c3e0b4b4c3aa103",
            "private_ip": "10.0.101.60",
            "public_ip": "18.158.236.219",
            "subnet_id": "subnet-0b4f666cd28e993e6",
            "tags": {
              "Environment": "dev",
              "Name": "web-dev-vpc"
            },
            "tags_all": {
              "Environment": "dev",
              "Name": "web-dev-vpc"
            }
          },
          "dependencies": [
            "module.web_vpc.aws_eip.nat",
            "module.web_vpc.aws_internet_gateway.this",
            "module.web_vpc.aws_subnet.public",
            "module.web_vpc.aws_vpc.this",
            "module.web_vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.web_vpc",
      "mode": "managed",
      "type": "aws_route",
      "name": "private_nat_gateway",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "carrier_gateway_id": "",
            "core_network_arn": "",
            "destination_cidr_block": "0.0.0.0/0",
            "destination_ipv6_cidr_block": "",
            "destination_prefix_list_id": "",
            "egress_only_gateway_id": "",
            "gateway_id": "",
            "id": "r-rtb-0216a0f248d2dfde91080289494",
            "instance_id": "",
            "instance_owner_id": "",
            "local_gateway_id": "",
            "nat_gateway_id": "nat-02e8a2e78a3a543b8",
            "network_interface_id": "",
            "origin": "CreateRoute",
            "route_table_id": "rtb-0216a0f248d2dfde9",
            "state": "active",
            "timeouts": {
              "create": "5m",
              "delete": null,
              "update": null
            },
            "transit_gateway_id": "",
            "vpc_endpoint_id": "",
            "vpc_peering_connection_id": ""
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.web_vpc.aws_eip.nat",
            "module.web_vpc.aws_internet_gateway.this",
            "module.web_vpc.aws_nat_gateway.this",
            "module.web_vpc.aws_route_table.private",
            "module.web_vpc.aws_subnet.public",
            "module.web_vpc.aws_vpc.this",
            "module.web_vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.web_vpc",
      "mode": "managed",
      "type": "aws_route",
      "name": "public_internet_gateway",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "carrier_gateway_id": "",
            "core_network_arn": "",
            "destination_cidr_block": "0.0.0.0/0",
            "destination_ipv6_cidr_block": "",
            "destination_prefix_list_id": "",
            "egress_only_gateway_id": "",
            "gateway_id": "igw-091a2ef934c437ae8",
            "id": "r-rtb-08abefc1ac0f43f201080289494",
            "instance_id": "",
            "instance_owner_id": "",
            "local_gateway_id": "",
            "nat_gateway_id": "",
            "network_interface_id": "",
            "origin": "CreateRoute",
            "route_table_id": "rtb-08abefc1ac0f43f20",
            "state": "active",
            "timeouts": {
              "create": "5m",
              "delete": null,
              "update": null
            },
            "transit_gateway_id": "",
            "vpc_endpoint_id": "",
            "vpc_peering_connection_id": ""
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.web_vpc.aws_internet_gateway.this",
            "module.web_vpc.aws_route_table.public",
            "module.web_vpc.aws_vpc.this",
            "module.web_vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.web_vpc",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:eu-central-1:509580140651:route-table/rtb-0216a0f248d2dfde9",
            "id": "rtb-0216a0f248d2dfde9",
            "owner_id": "509580140651",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "nat-02e8a2e78a3a543b8",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Environment": "dev",
              "Name": "web-dev-vpc"
            },
            "tags_all": {
              "Environment": "dev",
              "Name": "web-dev-vpc"
            },
            "timeouts": null,
            "vpc_id": "vpc-00b67dc242990a793"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.web_vpc.aws_vpc.this",
            "module.web_vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.web_vpc",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:eu-central-1:509580140651:route-table/rtb-08abefc1ac0f43f20",
            "id": "rtb-08abefc1ac0f43f20",
            "owner_id": "509580140651",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-091a2ef934c437ae8",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Environment": "dev",
              "Name": "web-dev-vpc"
            },
            "tags_all": {
              "Environment": "dev",
              "Name": "web-dev-vpc"
            },
            "timeouts": null,
            "vpc_id": "vpc-00b67dc242990a793"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.web_vpc.aws_vpc.this",
            "module.web_vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.web_vpc",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-03e705b5d69fd9e1e",
            "route_table_id": "rtb-0216a0f248d2dfde9",
            "subnet_id": "subnet-001f6f5304a1232d4"
          },
          "dependencies": [
            "module.web_vpc.aws_route_table.private",
            "module.web_vpc.aws_subnet.private",
            "module.web_vpc.aws_vpc.this",
            "module.web_vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0a278941e3a3c26eb",
            "route_table_id": "rtb-0216a0f248d2dfde9",
            "subnet_id": "subnet-011dc19b6b30f5b78"
          },
          "dependencies": [
            "module.web_vpc.aws_route_table.private",
            "module.web_vpc.aws_subnet.private",
            "module.web_vpc.aws_vpc.this",
            "module.web_vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": 2,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0e07548ea41bd2aee",
            "route_table_id": "rtb-0216a0f248d2dfde9",
            "subnet_id": "subnet-06bca406e38cd8592"
          },
          "dependencies": [
            "module.web_vpc.aws_route_table.private",
            "module.web_vpc.aws_subnet.private",
            "module.web_vpc.aws_vpc.this",
            "module.web_vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.web_vpc",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-00baf52964b762e02",
            "route_table_id": "rtb-08abefc1ac0f43f20",
            "subnet_id": "subnet-0b4f666cd28e993e6"
          },
          "dependencies": [
            "module.web_vpc.aws_route_table.public",
            "module.web_vpc.aws_subnet.public",
            "module.web_vpc.aws_vpc.this",
            "module.web_vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0c92f11a51df4796b",
            "route_table_id": "rtb-08abefc1ac0f43f20",
            "subnet_id": "subnet-00d4acc4d6f7919a1"
          },
          "dependencies": [
            "module.web_vpc.aws_route_table.public",
            "module.web_vpc.aws_subnet.public",
            "module.web_vpc.aws_vpc.this",
            "module.web_vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": 2,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-079906cd1682d3f7b",
            "route_table_id": "rtb-08abefc1ac0f43f20",
            "subnet_id": "subnet-031d203224ada6149"
          },
          "dependencies": [
            "module.web_vpc.aws_route_table.public",
            "module.web_vpc.aws_subnet.public",
            "module.web_vpc.aws_vpc.this",
            "module.web_vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.web_vpc",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-central-1:509580140651:subnet/subnet-001f6f5304a1232d4",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "eu-central-1a",
            "availability_zone_id": "euc1-az2",
            "cidr_block": "10.0.1.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-001f6f5304a1232d4",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "509580140651",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Environment": "dev",
              "Name": "web-dev-vpc"
            },
            "tags_all": {
              "Environment": "dev",
              "Name": "web-dev-vpc"
            },
            "vpc_id": "vpc-00b67dc242990a793"
          },
          "dependencies": [
            "module.web_vpc.aws_vpc.this",
            "module.web_vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-central-1:509580140651:subnet/subnet-011dc19b6b30f5b78",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "eu-central-1b",
            "availability_zone_id": "euc1-az3",
            "cidr_block": "10.0.2.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-011dc19b6b30f5b78",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "509580140651",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Environment": "dev",
              "Name": "web-dev-vpc"
            },
            "tags_all": {
              "Environment": "dev",
              "Name": "web-dev-vpc"
            },
            "vpc_id": "vpc-00b67dc242990a793"
          },
          "dependencies": [
            "module.web_vpc.aws_vpc.this",
            "module.web_vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": 2,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-central-1:509580140651:subnet/subnet-06bca406e38cd8592",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "eu-central-1c",
            "availability_zone_id": "euc1-az1",
            "cidr_block": "10.0.3.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-06bca406e38cd8592",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "509580140651",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Environment": "dev",
              "Name": "web-dev-vpc"
            },
            "tags_all": {
              "Environment": "dev",
              "Name": "web-dev-vpc"
            },
            "vpc_id": "vpc-00b67dc242990a793"
          },
          "dependencies": [
            "module.web_vpc.aws_vpc.this",
            "module.web_vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.web_vpc",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-central-1:509580140651:subnet/subnet-0b4f666cd28e993e6",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "eu-central-1a",
            "availability_zone_id": "euc1-az2",
            "cidr_block": "10.0.101.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0b4f666cd28e993e6",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "509580140651",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Environment": "dev",
              "Name": "web-dev-vpc"
            },
            "tags_all": {
              "Environment": "dev",
              "Name": "web-dev-vpc"
            },
            "vpc_id": "vpc-00b67dc242990a793"
          },
          "dependencies": [
            "module.web_vpc.aws_vpc.this",
            "module.web_vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-central-1:509580140651:subnet/subnet-00d4acc4d6f7919a1",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "eu-central-1b",
            "availability_zone_id": "euc1-az3",
            "cidr_block": "10.0.102.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-00d4acc4d6f7919a1",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "509580140651",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Environment": "dev",
              "Name": "web-dev-vpc"
            },
            "tags_all": {
              "Environment": "dev",
              "Name": "web-dev-vpc"
            },
            "vpc_id": "vpc-00b67dc242990a793"
          },
          "dependencies": [
            "module.web_vpc.aws_vpc.this",
            "module.web_vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": 2,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-central-1:509580140651:subnet/subnet-031d203224ada6149",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "eu-central-1c",
            "availability_zone_id": "euc1-az1",
            "cidr_block": "10.0.103.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-031d203224ada6149",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "509580140651",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Environment": "dev",
              "Name": "web-dev-vpc"
            },
            "tags_all": {
              "Environment": "dev",
              "Name": "web-dev-vpc"
            },
            "vpc_id": "vpc-00b67dc242990a793"
          },
          "dependencies": [
            "module.web_vpc.aws_vpc.this",
            "module.web_vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.web_vpc",
      "mode": "managed",
      "type": "aws_vpc",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-central-1:509580140651:vpc/vpc-00b67dc242990a793",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-01f48086c32f5b15f",
            "default_route_table_id": "rtb-017705f25028b4bb4",
            "default_security_group_id": "sg-0acf93fcb4b30e84b",
            "dhcp_options_id": "dopt-0c9a38137e6aaa44a",
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-00b67dc242990a793",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-017705f25028b4bb4",
            "owner_id": "509580140651",
            "tags": {
              "Environment": "dev",
              "Name": "web-dev-vpc"
            },
            "tags_all": {
              "Environment": "dev",
              "Name": "web-dev-vpc"
            }
          },
          "create_before_destroy": true
        }
      ]
    }
  ]
}